--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     * Ghostly
                     * Jump Chess
                     * Triviyear
+                    * Shepherd Dog
                   as Ad Supported apps. These SERVICES are provided by
                   Simeon Todorov at no cost and is intended for use as
                   is.
