--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     * Jump Chess
                     * Triviyear
                     * Shepherd Dog
+                    * Hanoi's Tower
                   as Ad Supported apps. These SERVICES are provided by
                   Simeon Todorov at no cost and is intended for use as
                   is.
